// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DomainSelector can can handle invalid domain 1`] = `
<div>
  <div
    class="pf-l-stack pf-m-gutter wizard-content"
  >
    <div
      class="pf-l-stack__item"
    >
      <h1
        class="pf-c-title pf-m-2xl"
        data-ouia-component-id="OUIA-Generated-Title-2"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Do you want to use a custom domain?
      </h1>
    </div>
    <div
      class="pf-l-stack__item wizard-sublabel"
    >
      <span
        class="pf-c-badge pf-m-read"
      >
        Optional
      </span>
       Create unique URLs for your edge cluster, such as device setup and console.
    </div>
    <div
      class="pf-l-stack__item domain-item"
    >
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="true"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-2"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            id="input-domain"
            type="text"
            value="invalid"
          />
          <div
            class="validation-failed-text"
            data-testid="domain-validation-failed"
          >
            Valid domain wasn't provided.
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-l-stack__item pf-m-fill"
    >
      <div
        class="domain-selector__example"
      >
        Setup URL: https://setup.
        <span
          class="domain-selector__example-domain-invalid"
          data-testid="domain-selector-example-setup"
        >
          invalid
        </span>
      </div>
      <div
        class="domain-selector__example"
      >
        Console URL: https://console.
        <span
          class="domain-selector__example-domain-invalid"
          data-testid="domain-selector-example-console"
        >
          invalid
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DomainSelector can can handle valid domain 1`] = `
<div>
  <div
    class="pf-l-stack pf-m-gutter wizard-content"
  >
    <div
      class="pf-l-stack__item"
    >
      <h1
        class="pf-c-title pf-m-2xl"
        data-ouia-component-id="OUIA-Generated-Title-3"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Do you want to use a custom domain?
      </h1>
    </div>
    <div
      class="pf-l-stack__item wizard-sublabel"
    >
      <span
        class="pf-c-badge pf-m-read"
      >
        Optional
      </span>
       Create unique URLs for your edge cluster, such as device setup and console.
    </div>
    <div
      class="pf-l-stack__item domain-item"
    >
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-3"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            id="input-domain"
            type="text"
            value="valid.com"
          />
          
        </div>
      </div>
    </div>
    <div
      class="pf-l-stack__item pf-m-fill"
    >
      <div
        class="domain-selector__example"
      >
        Setup URL: https://setup.
        <span
          class="domain-selector__example-domain"
          data-testid="domain-selector-example-setup"
        >
          valid.com
        </span>
      </div>
      <div
        class="domain-selector__example"
      >
        Console URL: https://console.
        <span
          class="domain-selector__example-domain"
          data-testid="domain-selector-example-console"
        >
          valid.com
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DomainSelector can render 1`] = `
<div>
  <div
    class="pf-l-stack pf-m-gutter wizard-content"
  >
    <div
      class="pf-l-stack__item"
    >
      <h1
        class="pf-c-title pf-m-2xl"
        data-ouia-component-id="OUIA-Generated-Title-1"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Do you want to use a custom domain?
      </h1>
    </div>
    <div
      class="pf-l-stack__item wizard-sublabel"
    >
      <span
        class="pf-c-badge pf-m-read"
      >
        Optional
      </span>
       Create unique URLs for your edge cluster, such as device setup and console.
    </div>
    <div
      class="pf-l-stack__item domain-item"
    >
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-1"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            id="input-domain"
            type="text"
            value=""
          />
          
        </div>
      </div>
    </div>
    <div
      class="pf-l-stack__item pf-m-fill"
    >
      <div
        class="domain-selector__example"
      >
        Setup URL: https://setup.
        <span
          class="domain-selector__example-domain"
          data-testid="domain-selector-example-setup"
        />
      </div>
      <div
        class="domain-selector__example"
      >
        Console URL: https://console.
        <span
          class="domain-selector__example-domain"
          data-testid="domain-selector-example-console"
        />
      </div>
    </div>
  </div>
</div>
`;
